2003-03-22  Kazu Hirata  <kazu@cs.umass.edu>

	* config/h8300/h8300.c (notice_update_cc): Correctly handle
	the case where the set destination is STRICT_LOW_PART.

2003-03-22  Svein E. Seldal  <Svein.Seldal@solidas.com>

	* config/c4x/t-c4x (INSTALL_LIBGCC): Make gcc recognize a c33 as a
	c30 instead of a c40 processor.

2003-03-22  Alan Modra  <amodra@bigpond.net.au>

	* combine.c (simplify_comparison <AND>): Use gen_int_mode.  Tidy.

2003-03-21  Zack Weinberg  <zack@codesourcery.com>

	* c-common.c: Include intl.h.
	(shadow_warning): Rewrite to allow better diagnostic translations.
	* c-common.h: Update prototype of shadow_warning.  Declare sw_kind enum.
	* c-decl.c (warn_if_shadowing): Update calls to shadow_warning;
	use it throughout.
	* Makefile.in (c-common.o): Add intl.h.

2003-03-21  Nathanael Nerode  <neroden@gcc.gnu.org>

	* config.gcc: Remove 'float_format'.

	* fixproto: Define NULL and size_t in generated stdlib.h and
	unistd.h.  Kill unused required_stdlib_h, required_unistd_h.
	Rearrange file generation loop for readability.  Generate time.h,
	string.h if missing.
	* tsystem.h: Include <string.h>, <time.h> unconditionally.
	* config.gcc: Blow away POSIX defines.

2003-03-22  Stephane Carrez  <stcarrez@nerim.fr>

	* config/m68hc11/m68hc11.md ("call_value"): Fix trap check.

2003-03-22  Stephane Carrez  <stcarrez@nerim.fr>

	* config/m68hc11/m68hc11.h (ASM_DECLARE_FUNCTION_NAME): Fix typo in
	writing .interrupt command.
	* config/m68hc11/m68hc11.md ("call"): Look at the symbol to see
	if it's a far or near function.
	("call_value"): Likewise.
	* config/m68hc11/m68hc11.c (m68hc11_attribute_table): Add far and
	near attributes.
	(m68hc11_handle_fntype_attribute): Accept attributes on methods.
	(m68hc11_override_options): Ignore -mlong-calls for 68HC11.
	(m68hc11_initial_elimination_offset): Set current_function_far
	according to attributes.
	(expand_prologue): Likewise.
	(trap_handler_symbol): New global to keep track of trap handlers.